css/style.css
@font-face {
  font-family: 'BravuraText';
  src: url('fonts/BravuraText.eot'); /* IE 5-8 */
  src: local(':)'), /* trick IE to ignore the rest */
      url('fonts/BravuraText.woff') format('woff'), /* IE9, old FF, Chrome */
      url('fonts/BravuraText.ttf') format('truetype'), /* Opera, Safari */
      url('fonts/BravuraText.svg') format('svg'); /* iOS */
}
header {
    background-image: url('/img/josquin.jpg');
    background-repeat: no-repeat;
    background-size: contain;
}
#notesbook {
    height: 70vh;
}
#navigator {
    height: 20vh;
}
.mensuration {
    font-family: 'BravuraText';
    font-size: xx-large;
}
#legend li {
    cursor: pointer;
}
#legend li text {
    margin-left: 1em;
}

svg {
    transition: opacity 0.5s linear,
      fill-opacity 0.5s linear,
      stroke-opacity 0.5s linear;
}
.note {
    fill: currentColor;
    stroke: currentColor;
    fill-opacity: 0.5;
    stroke-width: 1;
}
.subdued {
    opacity: 0.1;
}
.extreme {
  stroke: red;
  stroke-width: 2;
}
.brush .extent {
    stroke: black;
    fill-opacity: .08;
    stroke-opacity: .2;
    shape-rendering: crispEdges;
}
.brush .selection {
    stroke: darkgrey;
}
.tick line {
    stroke: lightgray;
}
.tick text {
    fill: gray;
    font-size: 1.4em;
}
path.domain {
    display: none;
}
.terminal {
    stroke: black;
    stroke-width: 2;
}
/* Tooltip styling inspired by http://bl.ocks.org/Caged/6476579 */
.d3-tip {
    line-height: 1;
    padding: 5px;
    background: rgba(0, 0, 0, 0.5);
    color: #fff;
    border-radius: 2px;
}
.ribbon {
    fill: currentColor;
    stroke: currentColor;
    fill-opacity: 0.5;
    stroke-width: 1;
}
.voice0 {
    color: #1f77b4;
}
.voice1 {
    color: #ff7f0e;
}
.voice2 {
    color: #2ca02c;
}
.voice3 {
    color: #d62728;
}
.voice4 {
    color: #9467bd;
}
.voice5 {
    color: #8c564b;
}
.voice6 {
    color: #e377c2;
}
.voice7 {
    color: #7f7f7f;
}
.voice8 {
    color: #bcbd22;
}
.voice9 {
    color: #17becf;
}
.fixed-action-button {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
}
.fixed-action-button > button {
    margin: 0;
}
ul.fab {
    flex: 0 0 auto;
    list-style: none;
    display: flex;
    align-items: center;
}

li {
    flex: 0 0 auto;
}
select {
    transition: all 0.5s linear;
}
select[disabled] {
    font-weight: 100;
    background-color: #eee;
}

.refline line {
    fill: none;
}
.refline--C4 line {
    stroke-dasharray: 4 4;
}
/*
** Override bootstrap styling
*/
.well {
    padding: 0;
    margin-left: 1em;
    margin-bottom: 1em;
    background-color: white;
}
#navigator {
    margin-right: 1em;
}
#notesbook {
  margin-bottom: 2em;
}

